[gd_scene load_steps=5 format=3 uid="uid://d32toa3sindlr"]

[ext_resource type="Script" uid="uid://c4uplxbq2x333" path="res://scenes/entity/ik/twad_entity.gd" id="1_p722f"]
[ext_resource type="Script" uid="uid://burwyoipe0s80" path="res://scripts/ik/ik_marker.gd" id="2_eo03y"]
[ext_resource type="Script" uid="uid://dbn2rsynxl2ca" path="res://scripts/ik/ik_target_container_twad.gd" id="3_eo03y"]
[ext_resource type="Script" uid="uid://bo2tjvybxxgfg" path="res://scripts/ik/ik_target.gd" id="4_ejysh"]

[node name="TwadEntity" type="Node3D"]
script = ExtResource("1_p722f")

[node name="MarkerContainer" type="Node3D" parent="."]

[node name="LeftIKMarker" type="Marker3D" parent="MarkerContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15, -1.3, 1.5)
script = ExtResource("2_eo03y")
metadata/_custom_type_script = "uid://burwyoipe0s80"

[node name="RightIKMarker" type="Marker3D" parent="MarkerContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.15, -1.3, 1.5)
script = ExtResource("2_eo03y")
metadata/_custom_type_script = "uid://burwyoipe0s80"

[node name="TargetContainerTwad" type="Node3D" parent="."]
script = ExtResource("3_eo03y")

[node name="LeftIKTarget" type="Marker3D" parent="TargetContainerTwad" node_paths=PackedStringArray("step_marker", "adjacent_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15, -1.3, 1.5)
top_level = true
script = ExtResource("4_ejysh")
step_marker = NodePath("../../MarkerContainer/LeftIKMarker")
step_distance = 0.5
adjacent_target = NodePath("../RightIKTarget")
metadata/_custom_type_script = "uid://bo2tjvybxxgfg"

[node name="RightIKTarget" type="Marker3D" parent="TargetContainerTwad" node_paths=PackedStringArray("step_marker", "adjacent_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.15, -1.3, 1.5)
top_level = true
script = ExtResource("4_ejysh")
step_marker = NodePath("../../MarkerContainer/RightIKMarker")
step_distance = 0.5
adjacent_target = NodePath("../LeftIKTarget")
metadata/_custom_type_script = "uid://bo2tjvybxxgfg"
